fixed broken UI added some basic color

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 .bigFont{
   font-size: 200%;
 }
+.bg{
+  background-color: rgb(86, 221, 176)
+}
+.text-berg{
+  color: rgb(98, 30, 30);
+}
